Tidied up for release

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "Start on Heroku: Clojure",
-  "description": "A barebones Clojure app, which can easily be deployed to Heroku.",
+  "name": "Kafka on Heroku: Clojure",
+  "description": "A Clojure app exposing Kafka topics over SSE, which can easily be deployed to Heroku.",
   "image": "heroku/clojure",
-  "addons": [ "heroku-postgresql" ]
+  "addons": [ "heroku-kafka" ]
 }
